# practice

./: README.md
6-8/: CMakeLists.txt
Eigen/: CMakeLists.txt  eigen_tutorial.cpp  test1.cpp  test_translation.cpp
GN_BA_PNP/: 1.cpp  CMakeLists.txt
IO/: CMakeLists.txt
LeNet5_MNIST/: config.py  dataloader.py  eval_ops.py  net.py  train.py  train_ops.py
OOP/: CMakeLists.txt  main.cpp
OOP/include/: Bulk_quote.h  Disc_quote.h  Quote.h
OOP/src/: Bulk_quote.cpp  Disc_quote.cpp  Quote.cpp
ORB/: CMakeLists.txt
ORB/include/: orb_self.h
ORB/src/: orb_cv.cpp  orb_self.cpp
STL/: CMakeLists.txt
Thread/: 1.cpp  CMakeLists.txt  CSAPP.c  condition_variable.cpp  lock_guard_thread.cpp  lock_guard_with_tag.cpp  mutex1.cpp  mutex2.cpp  t_111.cpp  t_contributer.cpp  t_hello.cpp  time_mutex.cpp  unique_lock_contri.cpp  unique_lock_move.cpp  unique_lock_owns_lock.cpp  unique_lock_thread.cpp
VIO_by_self/: IMU内参标定.md
aa/: CMakeLists.txt
aa/include/: Human.h  Men.h
aa/src/: 5-1.cpp  5-2.cpp  5-3.cpp  Human.cpp  Men.cpp  file.cpp  hello.cpp  main.cpp  map.cpp  singleton.cpp  tempVariable.cpp
adam/: optimization.py
bb/: CMakeLists.txt  bb.txt
bb/include/: TextQuery.h  bb.h  testQuery.h
bb/src/: 123123.cpp  234.cpp  TextQuery.cpp  bb.cpp  eigen.cpp  gpbs.cpp  main.cpp  mm.cpp  random.cpp
bind/: 1.cpp  CMakeLists.txt  cmw.cpp
book_tensorflow实战Google深度学习框架/: 3.1.1.py  3.2.1.py  3.3.py  3.4.5.py  5.2.1.py  9.1.py
bundleAdjustment/: CMakeLists.txt
bundleAdjustment/app/: bundleAdjustment.cpp
bundleAdjustment/include/: common_include.h  curve_fitting_GN.h  curve_fitting_g2o.h  dataset.h  edge.h  frame.h  frontend.h  pcl.h  problem.h  vertex.h
bundleAdjustment/src/: CMakeLists.txt  curve_fitting_GN.cpp  curve_fitting_g2o.cpp  edge.cpp  pcl.cpp  vertex.cpp
camera/: CMakeLists.txt
camera/app/: CMakeLists.txt  collect_image.cpp
camera/include/: chessboard_images.h  stereo_calib_and_rect.h
camera/src/: CMakeLists.txt  chessboard_images.cpp  stereo_calib_and_rect.cpp
ceres/: 1.cpp  CMakeLists.txt
circular_buffer/: 1.cpp  2.cpp  CMakeLists.txt
clang_test/: 1.cpp
class/: 1.cpp  CMakeLists.txt
class/include/: A.h  B.h  Human.h  Men.h  Time.h  Women.h
class/src/: 3-11.cpp  3-12.cpp  3-13.cpp  3-14.cpp  3-15.cpp  3-16.cpp  3-7.cpp  3-9.cpp  B.cpp  Human.cpp  Men.cpp  Time.cpp  Women.cpp  main.cpp
cmake/t2/: CMakeLists.txt
cmake/t2/src/: CMakeLists.txt  main.cpp
cmake/t3/: CMakeLists.txt
cmake/t3/app/: CMakeLists.txt  main.cpp
cmake/t3/lib/: libmylib.so.3
cmake/t3/src/: CMakeLists.txt  hello.cpp
cmake/t5/: CMakeLists.txt
cmake/t5/src/: CMakeLists.txt  main.cpp
copy_constructor/: 1.cpp
curve_fitting/: 1.cpp  CMakeLists.txt  g2o_type.h
distance/: 1.cpp  CMakeLists.txt
emplace_back/: CMakeLists.txt
enum/: 1.cpp
file_query/: .1.txt.swp  1.txt  CMakeLists.txt  main.cpp  text_query.cpp  text_query.h
filesystem/: 1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt  \
fstream/: CMakeLists.txt  test.txt  test_fstream.cpp
functional/: 1.cpp
g2o/: CMakeLists.txt
g2o/include/: g2o_type.h
g2o/src/: g2oCurveFitting.cpp  gaussNewton.cpp
gaussNewtonCurveFittiing/: CMakeLists.txt
gaussNewtonCurveFittiing/app/: CMakeLists.txt  start_g2o_GN.cpp  start_self_GN.cpp
gaussNewtonCurveFittiing/include/: g2o_GN_curve_fitting.h  self_GN_curve_fitting.h
gaussNewtonCurveFittiing/src/: CMakeLists.txt  g2o_GN_curve_fitting.cpp  self_GN_curve_fitting.cpp
gaussNewtonCurveFittiing_round2/: CMakeLists.txt  curvefitting_G2O.cpp  curvefitting_GN_self.cpp
gcc/: CMakeLists.txt  hello.cpp
google_log/: 1.cpp  CMakeLists.txt  google_log.cpp  test.h
gtest/: CMakeLists.txt
gtest/include/: add1.h
gtest/src/: CMakeLists.txt  add1.cpp  main.cpp
gtest/test/: test_add.cpp
gtsam-examples/: CMakeLists.txt
gtsam_demo/: CMakeLists.txt  SFMdata.h  math.pdf.cpp  self_calibration_example.cpp  simple_rotation.cpp
gtsam_visualize/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt
heart/: heart.py
list/: CMakeLists.txt  list.cpp
ll/: CMakeLists.txt
lock_free_stack/: CMakeLists.txt  lock_free_stack.cpp
macro/: 1.cpp  CMakeLists.txt
makefile/: makefile
malloc/: 1.cpp  CMakeLists.txt
map/: CMakeLists.txt  test_map.cpp
matlab/: bspline.m  check_arg.m  ex3_1.m  ex3_7.m  ex3_9.m  exam2_49.m  example1.m  example2.m  example2_41.m  example3.m  tentimes.m  test.mat
mnist/: dataloader.py
mt/: 2.1.cpp  2.2.cpp  2.3.cpp  2.4.cpp  6-2.cpp  6-4.cpp  CMakeLists.txt
multi_thread/: CMakeLists.txt
my_understand_g2o/: my_understand_edge.hpp  my_understand_sparse_optimizer.h  my_understand_vertex.hpp
namespace/: main.cpp
norm_distribution/: CMakeLists.txt  test1.cpp
numpy/: cholesky.py
objectModel/: 1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt  static_1.cpp  static_1.h  test_static.cpp
opencv/: CMakeLists.txt
opencv/src/: DisplayImage.cpp  GFTTDetector.cpp  LK.cpp  test_vcon.cpp
opencv2/: CMakeLists.txt
opencv2/include/: lk.h
opencv2/src/: 1.cpp  111.cpp  CMakeLists.txt  lk.cpp  main.cpp
opencv2/src/src/: Makefile  cmake_install.cmake
pangolin/: CMakeLists.txt  helloPangolin.cpp  pangolin_tutorial2.cpp  pangolin_tutorial3.cpp  pangolin_tutorial4.cpp
pcl/: 1.cpp  CMakeLists.txt
pointer/: 1.cpp  2.cpp  CMakeLists.txt  (+2 more)
sophus/: CMakeLists.txt
sophus/include/: 1.cpp
triangulation/: CMakeLists.txt
triangulation/app/: CMakeLists.txt  start_tria.cpp
triangulation/include/: orb.h  pose_estimation_2d_2d.h  triangulation.h  visiual.h
triangulation/src/: CMakeLists.txt  orb.cpp  pose_estimation_2d_2d.cpp  triangulation.cpp
untitled/: CMakeLists.txt
untitled/app/: CMakeLists.txt  CurveFitting.cpp
untitled/backend/: CMakeLists.txt  backend.h  edge.cpp  edge.h  eigen_types.h  problem.cpp  problem.h  vertex.cpp  vertex.h
untitled/utils/: tic_toc.h
vo_by_self/: CMakeLists.txt
vo_by_self/include/: pose_estimation_2d2d.h  pose_estimation_3d2d.h  triangulation.h
vo_by_self/src/: pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  triangulation.cpp
yaml_cpp/: CMakeLists.txt  read_yaml_file.cpp  test.yaml  test2.cpp  workspace_config.yaml
(+293 files in other folders)
